chore: set fixed hieght for ooter tpor prevent overlap of add to-do button with rendered to-dos

--- a/src/styles.css
+++ b/src/styles.css
@@ -59,8 +59,12 @@ h1 {
 
 
 #footer {
-    padding-bottom: 15px;
+    padding-bottom: 5px;
     padding-right: 15px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+
 }
 
 #sortingByCompletionButton {
